<resources>
    <string name="app_name">mySmallBiz</string>
    <string name="welcome_text">mySmallBiz </string>
    <string name="have_account_text">Login</string>
    <string name="need_account_text">Register</string>
    <string name="chat_logo">Chat logo</string>
    <string name="loginTextCard">Login</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter email</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="display_name">Display Name</string>
    <string name="password_field">Password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="user_name_placeholder">User Name</string>
    <string name="settings_status_placeholder">Here comes the status</string>
    <string name="change_picture">Change Picture</string>
    <string name="change_status">Change status</string>
    <string name="enter_status">Enter your status</string>
    <string name="status_hint">Status ...</string>
    <string name="update_status">Update Status</string>
    <string name="hint_status_enter">Enter your new status</string>
    <string name="default_profile_name">Profile Name</string>
    <string name="profile_status">Profile Status</string>
    <string name="user_name">User Name</string>
    <string name="send_message">Send Message</string>
    <string name="message">Message</string>
    <string name="my_message">My message:</string>
    <string name="open_user_profile">Open User Profile</string>
    <string name="choose_what_to_do">Choose what to do!</string>
    <string name="dashboard">Dashboard</string>
    <string name="login_failed_message">Sorry, login failed</string>
    <string name="login_error_message">Error while log in</string>
    <string name="profile_tab">Profile</string>
    <string name="user_not_created">User not created!</string>
    <string name="user_created">User created!</string>
    <string name="fill_fields">Please fill out the fields</string>
    <string name="settings_tab">Settings</string>
    <string name="needToLogin">Need to login</string>
    <string name="status">Status</string>
    <string name="statusUpdated">Status updated</string>
    <string name="statusNotUpdated">Status not updated</string>
</resources>
