<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/cardview_dark_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settingsProfileImage"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/settingsDisplayName"
        android:layout_width="170dp"
        android:layout_height="31dp"
        android:layout_marginEnd="164dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="16dp"
        android:text="@string/user_name_placeholder"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsProfileImage" />

    <TextView
        android:id="@+id/settingsStatus"
        android:layout_width="300dp"
        android:layout_height="34dp"
        android:layout_marginEnd="164dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="8dp"
        android:padding="3dp"
        android:text="@string/settings_status_placeholder"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsDisplayName" />

    <Button
        android:id="@+id/settingsChangeImage"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginEnd="113dp"
        android:layout_marginStart="113dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bt_shape_unabled"
        android:text="@string/change_picture"
        android:textColor="#8B8686"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsChangeStatus" />

    <Button
        android:id="@+id/settingsChangeStatus"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginEnd="149dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bt_shape"
        android:stateListAnimator="@drawable/state_list_animator_z"
        android:text="@string/change_status"
        android:textColor="#f0f7f4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsStatus" />
</android.support.constraint.ConstraintLayout>