<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    tools:context="com.chatapp.ui.profile.ProfileActivity">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="392dp"
        android:layout_height="263dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/profileName"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="164dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="16dp"
        android:padding="5dp"
        android:textSize="22sp"
        android:text="@string/user_name"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="#f0f7f4"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/profilePicture" />

    <TextView
        android:id="@+id/profileStatus"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="164dp"
        android:layout_marginStart="162dp"
        android:layout_marginTop="8dp"
        android:padding="5dp"
        android:text="@string/profile_status"
        android:textAlignment="center"
        android:textColor="#f0f7f4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileName" />

    <Button
        android:id="@+id/sendMessageButton"
        android:layout_width="184dp"
        android:layout_height="48dp"
        android:layout_marginEnd="128dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="24dp"
        android:text="@string/send_message"
        android:background="@drawable/bt_shape"
        android:stateListAnimator="@drawable/state_list_animator_z"
        android:textColor="#f0f7f4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileStatus" />
</android.support.constraint.ConstraintLayout>