<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chatapp.ui.login.LoginActivity">

    <android.support.v7.widget.CardView
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="13dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/logo_green"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:text="@string/loginTextCard"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                android:paddingEnd="30dp">

                <EditText
                    android:id="@+id/loginEmailCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/selector_bg_edit_2"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="2dp"
                    android:padding="8dp"
                    android:textColor="#f0f7f4"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/passwordCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/selector_bg_edit_2"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:paddingBottom="2dp"
                    android:textColor="#f0f7f4"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/loginButtonCard"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/bt_shape"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/login"
                    android:textColor="#f0f7f4" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.constraint.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />
</android.support.constraint.ConstraintLayout>