<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chatapp.ui.status.StatusActivity">

    <android.support.v7.widget.CardView
        android:layout_width="355dp"
        android:layout_height="240dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="12dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorAccent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingEnd="30dp"
                android:paddingStart="50dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/enter_status"
                    android:textColor="#fff"
                    android:textSize="19sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/changeStatusCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/selector_bg_edit_2"
                    android:ems="10"
                    android:hint="@string/status_hint"
                    android:inputType="textCapSentences"
                    android:textColor="#f0f7f4"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:textSize="16sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/statusUpdateButton"
                        android:layout_width="160dp"
                        android:layout_height="45dp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/bt_shape"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:text="@string/update_status"
                        android:textColor="#f0f7f4" />

                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>