<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chatapp.ui.registration.RegistrationActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="300dp"
        android:layout_height="320dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="13dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="InvalidId">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/logo_green"
            android:orientation="vertical">

            <ImageView
                android:layout_width="80dp"
                android:padding="8dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/create_new_account"
                android:textColor="#f0f7f4"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:paddingEnd="20dp"
                android:paddingStart="20dp">

                <EditText
                    android:id="@+id/accountDisplayName"
                    android:background="@drawable/selector_bg_edit_2"
                    android:inputType="textCapSentences"
                    android:hint="@string/display_name"
                    android:paddingBottom="10dp"
                    android:paddingTop="4dp"
                    android:textColor="#f0f7f4"
                    android:textSize="14sp"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/accountEmail"
                    android:background="@drawable/selector_bg_edit_2"
                    android:inputType="textEmailAddress"
                    android:hint="@string/enter_email"
                    android:paddingTop="4dp"
                    android:paddingBottom="10dp"
                    android:textColor="#f0f7f4"
                    android:textSize="14sp"
                    android:textCursorDrawable="@drawable/bg_input_cursor_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/accountPassword"
                    android:background="@drawable/selector_bg_edit_2"
                    android:inputType="textPassword"
                    android:hint="@string/password_field"
                    android:paddingTop="4dp"
                    android:paddingBottom="10dp"
                    android:textColor="#f0f7f4"
                    android:textSize="14sp"
                    android:textCursorDrawable="@drawable/bg_input_cursor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="60dp">
                    <Button
                        android:id="@+id/accountCreateButton"
                        android:background="@drawable/bt_shape"
                        android:stateListAnimator="@drawable/state_list_animator_z"
                        android:textColor="#f0f7f4"
                        android:text="@string/create_new_account"
                        android:layout_width="wrap_content"
                        android:padding="8dp"
                        android:textSize="12sp"
                        android:layout_marginTop="20dp"
                        android:layout_height="70dp" />
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>